# default-w-github

./: LICENSE  README.md  setup.cfg  tox.ini
src/default_w_github/: napari.yaml
src/default_w_github/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
