[metadata]
name = default-w-github
version = 0.0.1
author = Draga Doncila
author_email = ddoncila@gmail.com
url = https://github.com/DragaDoncila/default-w-github
license = BSD-3-Clause
description = A simple plugin to use with napari
long_description = file: README.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/DragaDoncila/default-w-github/issues
    Documentation = https://github.com/DragaDoncila/default-w-github#README.md
    Source Code = https://github.com/DragaDoncila/default-w-github
    User Support = https://github.com/DragaDoncila/default-w-github/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
default-w-github = 
    napari.yaml

[options.entry_points] 
napari.manifest = 
    default-w-github = default_w_github:napari.yaml
